Pages/Comments-Reviews/comments.css
@import url("../../assets/fonts/Poppins-SemiBold.ttf");
.section-title,
.section-title-form {
  font-size: 20px;
  font-family: "Poppins-SemiBold", sans-serif;
  line-height: 30px;
  font-weight: 600;
  color: #21826e;
}
.section-title-form {
  margin-bottom: 15px;
}
.form-area {
  width: 60%;
  margin: auto;
}
#comment_name {
  width: 100%;
  height: 40px;
  text-indent: 20px;
}
#comment_content {
  text-indent: 10px;
  padding-top: 15px;
}
#comment_content,
#comment_name {
  background-color: #e6e6e6;

  border-radius: 7px;
  border: none;
  color: #353434;
}
#comment_content::placeholder,
#comment_name::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #a2a2a2;
}
#comment_name:focus {
  outline: none;
}
.submitbtn {
  background-color: #21826e;
  display: flex;
  float: right;
  border: none;
  border-radius: 100px;
  color: white;
  padding: 6px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 15px;
  margin-bottom: 20px;
  cursor: pointer;
}
.comment-card,
.reply-comment-card {
  background: #ffffff;
  box-shadow: 0px 2px 11px -3px #b5b5b5;
  border-radius: 15px;
}
.reply-comment-card {
  margin-bottom: 45px;
}
.reply-button {
  margin-bottom: 25px;
  padding: 0 15px 15px 30px;
}
.reply {
  border: none;
  background-color: #ffffff;
  color: #21826e;
  font-size: 13px;
  font-weight: 600;
}
.comment-user {
  width: 35px;
  height: 35px;
  margin-right: 14px;
  margin-top: 15px;
}
.commentor-name {
  color: #676767;
}
.panel-body {
  color: #676767;
  font-size: 14px;
  line-height: 1.5;
  margin-left: 63px;
}
.reply-panel-body {
  color: #676767;
  font-size: 14px;
  line-height: 1.5;
  margin-left: 60px;
}

